[gd_scene load_steps=10 format=3 uid="uid://071ix4tfv54t"]

[ext_resource type="FontFile" path="res://assets/ui/fonts/montserrat_eb_48.tres" id="1"]
[ext_resource type="Script" path="res://menu/main_menu/ui/ui.gd" id="2"]
[ext_resource type="Script" path="res://addons/SafeArea/SafeArea.gd" id="2_xplq0"]
[ext_resource type="Texture2D" uid="uid://cn5b1dqntt7xy" path="res://assets/ui/icons/play.png" id="3"]
[ext_resource type="FontFile" uid="uid://cs1nhg4hgf0v2" path="res://assets/ui/fonts/montserrat_eb_32.tres" id="3_dfpds"]
[ext_resource type="PackedScene" uid="uid://dr5rj4h6xgctj" path="res://menu/score/score.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://cfc0mxfhd0c40" path="res://assets/ui/icons/score.png" id="5"]
[ext_resource type="PackedScene" uid="uid://f6l4g35fkt25" path="res://menu/popup_message/popup_message.tscn" id="8_0i2j1"]
[ext_resource type="PackedScene" uid="uid://dqqet8nw8jrnv" path="res://menu/loading/loading.tscn" id="8_633u8"]

[node name="ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SafeArea" type="MarginContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_xplq0")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/SafeArea"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="sign_out" type="Button" parent="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_dfpds")
theme_override_font_sizes/font_size = 18
text = "Sign Out"

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_dfpds")
theme_override_font_sizes/font_size = 24
text = "..."

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="score_button" type="Button" parent="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
icon = ExtResource("5")
flat = true
expand_icon = true

[node name="VBoxContainer" type="CenterContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/SafeArea/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 32
text = "Cross Word
Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="play" type="Button" parent="CanvasLayer/Control/SafeArea/VBoxContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1")
flat = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/SafeArea/VBoxContainer/VBoxContainer/VBoxContainer/play"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("3")
expand_mode = 1

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="test_reward_adds" type="Button" parent="CanvasLayer/Control/SafeArea/VBoxContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_dfpds")
theme_override_font_sizes/font_size = 18
disabled = true
text = "Test reward"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="score" parent="CanvasLayer/Control" instance=ExtResource("4")]
visible = false
layout_mode = 1

[node name="popup_message" parent="CanvasLayer/Control" instance=ExtResource("8_0i2j1")]
layout_mode = 1

[node name="loading" parent="CanvasLayer/Control" instance=ExtResource("8_633u8")]
visible = false
layout_mode = 1

[connection signal="pressed" from="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer/CenterContainer/sign_out" to="." method="_on_sign_out_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer/score_button" to="." method="_on_score_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/SafeArea/VBoxContainer/VBoxContainer/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/SafeArea/VBoxContainer/VBoxContainer/VBoxContainer/test_reward_adds" to="." method="_on_test_adds_pressed"]
